# kicktheiconlite

./: CMakeLists.txt  README.md  about.md  gen_mod_settings.py  logo.pdn  mod.json
src/: ModSettings.cpp  ModSettings.h  ModTuning.h  OverlayRendering.cpp  OverlayRendering.h  OverlayShaders.h  OverlayShaders_embed.cpp.in  PhysicsMenu.cpp  PhysicsMenu.h  PhysicsOverlay.cpp  PhysicsOverlay.h  PhysicsOverlayTuning.h  PhysicsTestPanel.cpp  PhysicsTestPanel.h  PhysicsWorld.cpp  PhysicsWorld.h  PlayerVisual.cpp  PlayerVisual.h  RuntimeRestart.cpp  RuntimeRestart.h  main.cpp
src/assets/: 3d_text.blend  3d_text.blend1  build_texture_atlas.py  glyph_atlas.plist
src/assets/soggy/: build_animation_atlas.py  soggy_atlas.plist  soggycube.blend  soggycube.blend1
src/box2d-lite/: Arbiter.cpp  Arbiter.h  Body.cpp  Body.h  Collide.cpp  Joint.cpp  Joint.h  MathUtils.h  World.cpp  World.h
src/events/: ClickEvents.cpp  ClickEvents.h  ScreenPropertiesChangedEvent.cpp  ScreenPropertiesChangedEvent.h
src/extras/: GlyphTextRendering.cpp  GlyphTextRendering.h
src/objects/: SoggyObject.cpp  SoggyObject.h
src/physics-overlay/: MenuShatterTriangleNode.cpp  MenuShatterTriangleNode.h  PhysicsOverlay.cpp  PhysicsOverlayDebug.cpp  PhysicsOverlayShatter.cpp  PhysicsOverlayTouch.cpp
src/shaders/: bw_background.frag  color_invert.frag  fire_aura.frag  impact_noise.frag  starburst_frame.frag  white_flash.frag
src/vfx/: FireAura.cpp  FireAura.h  ImpactFlash.cpp  ImpactNoise.cpp  ObjectMotionBlurPipeline.cpp  SandevistanTrail.cpp  SandevistanTrail.h  StarBurst.cpp  VfxTypes.h
